# verus-proptest

./: .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix
verus_proptest/: Cargo.toml
verus_proptest/src/: codegen.rs  lib.rs  verus.rs
verus_proptest/tests/: expand.rs  human_eval_034.rs  human_eval_050.rs  human_eval_100.rs
verus_proptest_macro/: Cargo.toml
verus_proptest_macro/src/: lib.rs
verus_proptest_macro/src/strategy/: analyze.rs  codegen.rs  expr_utils.rs  mod.rs
